[tool.poetry]
name = "research-assistant"
version = "0.1.0"
description = "A CLI tool for research paper analysis"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.9"
click = "^8.1.3"
rich = "^13.0.0"
langchain = "~0.1.0"
chromadb = "^0.4.0"
openai = "^1.0.0"
anthropic = "^0.5.0"
pypdf = "^3.0.0"
arxiv = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"